--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@
 	}
 
 	.dark {
-		--background: #000;
+		--background: 222.2 84% 4.9%;
 		--foreground: 210 40% 98%;
 
 		--muted: 217.2 32.6% 17.5%;
